--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "material-icons": "^1.13.8",
     "supertokens-web-js": "^0.5.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@fontsource/open-sans": "^5.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-vue": "^4.0.0",
