--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@fontsource/open-sans": "^5.0.3",
+    "@fontsource/source-code-pro": "^5.0.3",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/react-dom": "^18.2.4",
     "@vitejs/plugin-vue": "^4.0.0",
