--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "material-icons": "^1.13.8",
+    "mitt": "^3.0.0",
     "supertokens-web-js": "^0.5.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
